# HED-6659-Data-Analysis

./: .gitignore  README.md  pyproject.toml
hed_6659/: __init__.py  utils.py  visar.py
hed_6659/visar/: __init__.py  shock.py  visar.py
hed_6659/xrd/: __init__.py  varex.py
scripts/: damnit_context_1.py  metro_context.py  runner.py  shock.py  visar_calibration_values.toml  visar_test.ipynb  worker.py  worker_dipole.py
scripts/calibration_transformation/: heXRD_to_pyFAI_calibration_transform.ipynb  pyFAI_to_heXRD_calibration_transform.ipynb
src/hed_6659/: utils.py
src/hed_6659/visar/: __init__.py  shock.py  visar.py
src/hed_6659/xrd/: projection.py  varex.py
tests/: __init__.py  test_integrate.py
visar/: README.md  damnit_context.py  metro_context.py  visar.py  visar_calibration_values.toml
xrd/: integrate.py
